@@ -16,6 +16,7 @@ classes = Split("""
 headers = Split("""
    siren.h
    Singleton.h
+   Types.h
 """)
 sources = []
 
